--- a/styles-resume.css
+++ b/styles-resume.css
@@ -61,7 +61,6 @@ ul {
     color: #033f63;
 }
 #intro-box p {
-    width: 700px;
     flex-grow: 2;
 }
 #casual-box {
@@ -77,7 +76,9 @@ ul {
 }
 
 #logo {
-    transform: scale(0.9);
+    transform: scale(0.1);
+    margin-left: auto;
+    margin-right: auto;
 }
 #selfie {
     transform: scale(0.7);
