--- a/styles-resume.css
+++ b/styles-resume.css
@@ -53,15 +53,16 @@ ul {
 }
 
 #intro-box {
-    display: flexbox;
-    flex-flow: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 150px 150;
+    justify-content: center;
     background-color: #46B1C9;
     color: #033f63;
 }
 #intro-box p {
-    flex-grow: 2;
+    grid-column: 1/2;
+    grid-row: 1/3;
 }
 #casual-box {
     display: flexbox;
@@ -82,7 +83,8 @@ ul {
 }
 #selfie {
     transform: scale(0.7);
-    flex-shrink: 2;
+    grid-column: 2/3;
+    grid-row: 1/3;
 }
 #c-m-3 {
     transform: scale(0.75);
