--- a/styles-resume.css
+++ b/styles-resume.css
@@ -56,7 +56,10 @@ ul {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 150px 150;
-    justify-content: center;
+    justify-content: space-evenly;
+    justify-items: center;
+    align-content: space-evenly;
+    align-items: center;
     background-color: #46B1C9;
     color: #033f63;
 }
@@ -65,15 +68,19 @@ ul {
     grid-row: 1/3;
 }
 #casual-box {
-    display: flexbox;
-    flex-flow: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 150px 150;
+    justify-content: space-evenly;
+    justify-items: center;
+    align-content: space-evenly;
+    align-items: center;
     background-color: #46B1C9;
     color: #033f63;
 }
 #casual-box p {
-    width: 700px;
+    grid-column: 2/3;
+    grid-row: 1/3;
 }
 
 #logo {
@@ -88,5 +95,7 @@ ul {
 }
 #c-m-3 {
     transform: scale(0.75);
+    grid-column: 1/2;
+    grid-row: 1/3;
 }
 
