--- a/styles-resume.css
+++ b/styles-resume.css
@@ -13,8 +13,6 @@ nav a {
 nav a:hover {
     background-color: #84C0C6
 }
-
-
 footer {
     background-color: #46B1C9; 
     color: #033f63;
@@ -79,6 +77,8 @@ ul {
 
 #logo {
     transform: scale(0.1);
+    margin-left: 0 auto;
+    margin-right: 0 auto;
 }
 #selfie {
     transform: scale(0.7);
