--- a/styles-resume.css
+++ b/styles-resume.css
@@ -91,3 +91,21 @@ ul {
     grid-row: 1/3;
 }
 
+/* Job Experience Accordion and Site */
+.accordion {
+    background-color: #46B1C9;
+    color: #033f63;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+.panel {
+    padding: 0 18px;
+    background-color: #84C0C6;
+    display: none;
+    overflow: hidden;
+  }
