--- a/styles-resume.css
+++ b/styles-resume.css
@@ -94,6 +94,7 @@ ul {
 /* Job Experience Accordion and Site */
 .small {
     transform: scale(0.20);
+    padding: 0%;
 }
 
 div.scroll-container {
