--- a/styles-resume.css
+++ b/styles-resume.css
@@ -128,6 +128,25 @@ div.scroll-container {
 
   /* Skills Site */
 
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #46B1C9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
   #hard-skill {
     display: grid;
     grid-template-columns: 50% 50%;
