--- a/styles-resume.css
+++ b/styles-resume.css
@@ -92,15 +92,18 @@ ul {
 }
 
 /* Job Experience Site */
-/* .small {
+.small {
     transform: scale(0.20);
     padding: 0%;
     height: 600px;
     width: 500px;
-} */
+}
 
-.small {
-    object-fit: fill;
+.s-small {
+    transform: scale(0.40);
+    padding: 0%;
+    height: 600px;
+    width: 500px;
 }
 
 div.scroll-container {
@@ -184,6 +187,6 @@ div.scroll-container {
     grid-row: 1/2;
 }
 #soft-info {
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 2/3;
 }
