--- a/styles-resume.css
+++ b/styles-resume.css
@@ -124,7 +124,7 @@ div.scroll-container {
 
   .dropdown {
     position: relative;
-    display: inline-block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
