--- a/styles-resume.css
+++ b/styles-resume.css
@@ -75,7 +75,7 @@ ul {
     grid-row: 1/3;
 }
 
-#logo {
+#logo-container {
     display: block;
     margin-left: 0 auto;
     margin-right: 0 auto;
@@ -123,7 +123,9 @@ div.scroll-container {
   /* Skills Site */
 
   .dropdown {
+    display: block;
     position: relative;
+    height: 50px;
     display: block;
     margin-left: auto;
     margin-right: auto;
